корекція після перевірки

--- a/src/components/Notification/Notification.module.css
+++ b/src/components/Notification/Notification.module.css
@@ -1,7 +1,7 @@
 .notification {
   align-self: center;
   text-align: center;
-  width: 360px;
-  padding: 40px;
-  font-weight: bold;
+  width: 250px;
+  /* padding: 40px; */
+  /* font-weight: bold; */
 }
