--- a/src/components/Feedback/Feedback.module.css
+++ b/src/components/Feedback/Feedback.module.css
@@ -1,24 +1,34 @@
 .div {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  padding-top: 140px;
+  display: block;
+  margin-top: 50px;
+  padding-top: 40px;
+  color: rgb(2, 58, 114, 0.95);
+  border: 1px solid black;
+  border-radius: 25px;
+  width: 500px;
+  height: 600px;
+  margin-left: auto;
+  margin-right: auto;
+  background-image: linear-gradient(
+    36deg,
+    rgb(246, 198, 195, 0.5) 10%,
+    #b0f8c6 30%,
+    #ade4f8 45%,
+    #f8dfa0
+  );
 }
 
 .title {
+  font-size: 36px;
   margin-bottom: 18px;
   text-align: center;
   font-weight: bold;
 }
 
-.titles {
-  align-self: center;
-  width: 360px;
-  padding: 40px;
-  background-color: lightblue;
-}
-
 .statistic {
-  font-size: medium;
+  font-size: 22px;
+  display: flex;
+  flex-direction: row;
+  gap: 10px;
   text-align: center;
 }
