--- a/src/components/FeedbackOptions/FeedbackOptions.module.css
+++ b/src/components/FeedbackOptions/FeedbackOptions.module.css
@@ -1,20 +1,22 @@
-.statistic {
-  font-size: medium;
-  text-align: center;
-}
-
-.btns {
-  align-self: center;
-  text-align: center;
-}
-
 .btn {
-  height: 54px;
-  width: 54px;
-
+  display: block;
+  text-align: center;
+  width: 150px;
+  height: 45px;
+  margin-top: 37px;
+  margin-bottom: 30px;
+  margin-right: auto;
+  margin-left: auto;
+  font-size: 24px;
+  background: radial-gradient(circle, #fbfb05, #fb94c9);
+  border: 1px solid black;
+  border-radius: 8px;
   cursor: pointer;
+  transition: transform 1000ms;
 }
-
-.btn:not(:last-child) {
-  margin-right: 32px;
+.btn:hover {
+  color: white;
+  background: radial-gradient(circle, #48fa17, #f21c8b);
+  transform: scale(1.25);
+  padding: 10px;
 }
